<resources>
    <string name="app_name">BikeBlocker</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_settings_login">Sign in</string>

    <string name="title_activity_register_admin">RegisterAdminActivity</string>
    <string name="insert_password">Insert Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_error">"Passwords does not match. Password must have minimum 4 caracters"</string>
    <string name="register_change_password">"Register new password"</string>
    <string name="title_activity_list_users">ListUsersActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_new_user">AddNewUserActivity</string>
    <string name="title_activity_view_user">ViewUserActivity</string>
    <string name="usernameLabel">Username: </string>
    <string name="creditsLabel">Credits</string>
    <string name="confirmTitle">Are You Sure?</string>
    <string name="confirmMessageUser">This will permanently delete this user.</string>
    <string name="confirmMessageApp">This will permanently delete this app from your list.</string>
    <string name="button_delete">Delete</string>
    <string name="button_OK">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="hint_name">Name</string>
    <string name="hint_username">Username</string>
    <string name="saveUser">Save</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="noUsersMessage">No users registered!</string>
    <string name="title_activity_user_apps_list">User apps</string>
    <string name="title_activity_add_new_app_to_user">AddNewAppToUserActivity</string>
    <string name="title_activity_add_user_app">AddUserAppActivity</string>
    <string name="creditsMessage">Select the number of credits needed to access this app for 1 hour.</string>
    <string name="title_activity_check_user_login_dialog">CheckUserLoginDialogActivity</string>
    <string name="title_activity_connect_bluetooth">ConnectBluetoothActivity</string>
    <string name="connect">Connect</string>
    <string name="listDevices">Search Devices</string>
    <string name="title_activity_start_connection">StartConnectionActivity</string>
    <string name="title_activity_cycling">CyclingActivity</string>
    <string name="velocityLabel">Velocity (km/h)</string>
    <string name="distanceLabel">Distance (meters)</string>
    <string name="caloriesLabel">Calories (kcal)</string>
</resources>
