<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="bikeblocker.bikeblocker.Control.AddNewUserActivity"
    android:id="@+id/activity_add_new_user">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/newUserLayout">

        <EditText android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext" android:hint="@string/hint_name"
        android:inputType="textPersonName|textCapWords"
            android:contentDescription="userName"
            android:layout_row="0"
            android:layout_column="0" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:hint="@string/hint_username"
            android:inputType="textPersonName|textCapWords"
            android:contentDescription="userUsername"
            android:layout_row="1"
            android:layout_column="0" />

        <EditText android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext" android:hint="@string/insert_password"
            android:layout_row="2"
            android:layout_column="0"
            android:inputType="textPassword"
            android:contentDescription="userPassword" />

        <EditText android:id="@+id/confirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext" android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_row="3"
            android:layout_column="0"
            android:contentDescription="userConfirmPassword" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveUser"
            android:id="@+id/saveUserButton"
            android:layout_row="10"
            android:layout_column="0"
            android:layout_alignParentBottom="true"
            android:clickable="true"
            android:enabled="true"
            android:focusable="false"
            android:focusableInTouchMode="true" />

    </GridLayout>

</RelativeLayout>
