<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    android:background="@drawable/background_cycling"
    tools:context="bikeblocker.bikeblocker.Control.CyclingActivity">


    <Chronometer
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/chronometer"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/creditsTextView"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/chronometer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/creditsLabel"
        android:id="@+id/creditsLabelTextView"
        android:layout_below="@+id/creditsTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/velocityLabel"
        android:id="@+id/velocityLabel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="100dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/distanceLabel"
        android:id="@+id/distanceLabel"
        android:layout_alignTop="@+id/velocityLabel"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/caloriesLabel"
        android:id="@+id/caloriesLabel"
        android:layout_alignBottom="@+id/distanceLabel"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/velocityTextView"
        android:layout_below="@+id/velocityLabel"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/distanceTextView"
        android:layout_below="@+id/distanceLabel"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/caloriesTextView"
        android:layout_below="@+id/caloriesLabel"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/finishCyclingButton"
        android:layout_alignParentTop="true"
        android:background="@drawable/stopcycling_icon"
        android:layout_alignEnd="@+id/caloriesTextView" />
</RelativeLayout>
