<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bikeblocker.bikeblocker.Control.RegisterPasswordActivity"
    android:orientation="horizontal"
    android:background="@drawable/user_background">
    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <LinearLayout android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical"
        android:baselineAligned="false"
        android:layout_gravity="center_vertical">

        <EditText
            android:id="@+id/insert_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/insert_password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:contentDescription="insertAdminPassword" />

        <EditText android:id="@+id/confirm_password" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/confirm_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/register"
            android:imeOptions="actionUnspecified" android:inputType="textPassword"
            android:maxLines="1" android:singleLine="true"
            android:contentDescription="confirmAdminPassword" />

        <info.hoang8f.widget.FButton android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:minWidth="200dp"
            android:layout_marginTop="16dp"
            android:text="@string/register"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            fbutton:buttonColor="@color/fbutton_color_turquoise"
            android:contentDescription="confirmRegister" />

    </LinearLayout>

</LinearLayout>

